--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <div class="container">
             <h2 class="lead-head">Trainees experience</h2>
             <div class="testimonial bg-primary">
-              <img src="./image/new_image.jpg" alt="div_image_3" />
+              <img src="image/new_image.jpg" alt="div_image_3" />
               <p>
                 Zǎo shang hǎo zhōng guó! Xiàn zài wǒ yǒu BING CHILLING Wǒ hěn xǐ
                 huān BING CHILLING Dàn shì "sù dù yǔ jī qíng jiǔ" bǐ BING
@@ -90,7 +90,7 @@
               </p>
             </div>
             <div class="testimonial bg-primary">
-              <img src="./image/section_image_2.jpg" alt="div_image_3" />
+              <img src="image/section_image_2.jpg" alt="div_image_3" />
               <p>
                 Zǎo shang hǎo zhōng guó! Xiàn zài wǒ yǒu BING CHILLING Wǒ hěn xǐ
                 huān BING CHILLING Dàn shì "sù dù yǔ jī qíng jiǔ" bǐ BING
